@@ -1,3 +1,8 @@
+2004-08-25  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/munge_defs.h:
+	  Changed MUNGE_DEFAULT_ZIP from MUNGE_ZIP_ZLIB to MUNGE_ZIP_NONE.
+
 2004-08-24  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* src/munge/munge.c(destroy_conf): Removed unnecessary test for ctx.
